# cas-ml

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
01_intro/: advanced_py.ipynb  california.ipynb  data-science.md  np.ipynb
01_intro/project/: README.md  notebook.ipynb  pyproject.toml
01_intro/project/data/: dogs-exportBreeds.csv
02_supervised_learning/: 01_data_preprocessing.md  02_regression.md  03_classification.md  notes.md
03_unsupervised_learning/: 01_clustering.md  02_dimensionality_reduction.md  notes.md
04_deep_learning/: 01_neural_networks.md  02_keras.md  neural_networks.md
05_computer_vision/: 01_image_fundamentals_and_cnns.md  02_detection_and_segmentation.md
06_generative_models/: 01_autoregressive_models.md  02_vaes.md  03_gans.md
data/: dogs-importBreeds.csv  test.csv
