[project]
name = "cas-ml-notes"
version = "0.1.0"
description = "Personal study notes and practice notebooks for the HSLU CAS Machine Learning course"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.0",
]
